# steering_diversity

./: .gitignore  .gitmodules  CLAUDE.md  How Well Does Steering Demonstrate a Model’s True Diversity_.md  Makefile  PREREGISTRATION.md  README.md  RESEARCH_LOG.md  pass_at_k_evaluation_plan.md  pyproject.toml
.claude/: settings.json
.claude-tools/: scaleup-status.sh  start-qwq-server.sh  vllm-status.sh  vllm-test-prompt.sh
configs/: creativity_full.yaml  eval_bigcodebench.yaml  eval_bigcodebench_qwen3_steered.yaml  eval_bigcodebench_qwq_steered.yaml  eval_bigcodebench_qwq_unsteered.yaml  eval_code.yaml  eval_code_dev.yaml  eval_code_main_steered.yaml  eval_code_main_steered_a2_gpu0.yaml  eval_code_main_steered_a2_gpu1.yaml  eval_code_main_unsteered.yaml  eval_code_mbpp.yaml  eval_code_qwen3_steered.yaml  eval_code_qwen3_unsteered.yaml  eval_code_test_steered.yaml  experiment1.yaml  experiment1_dev.yaml  happy_dev.yaml  happy_full.yaml  happy_recon.yaml  qwen3_no_thinking.jinja  qwq_no_thinking.jinja  style_full.yaml
configs/bounds/: llama_creativity.yaml  llama_random.yaml  qwen_happy.yaml  qwen_happy_extended.yaml  qwen_random.yaml  qwen_style.yaml  smoke.yaml
data/contrastive_pairs/: deception.json
docs/: README.md  extension_app.md  pr_steer_allow_cuda_graphs.md  second_order.md  second_order_tex.tex  steering_diversity_paper.md  steering_diversity_write_up.md
docs/bounds/: README.md  second_order_consistency.md
docs/paper_sections/: diversity_reduction_abridged.tex  diversity_reduction_conditions.tex  diversity_reduction_empirical.tex  diversity_reduction_geometric.tex  diversity_reduction_refs.bib  diversity_reduction_second_order.tex  diversity_reduction_synthesis.tex  diversity_reduction_theory.tex  diversity_reduction_walkthrough.tex
docs/plans/: incremental_passk_resume.md  iso_passk1_search_plan.md
docs/poster/: poster.html  poster_instructions.md  slideshow.html
docs/tables/: coverage_gain_n100.md  creativity_full_metrics.md  creativity_full_stats.md  cross_experiment_comparison.md  eval_awareness_qwen3_32b.md  happy_full_metrics.md  happy_full_stats.md  happy_recon_stats.md  happy_recon_within_vs_pooled.md  ms_triggers_comparison.md  ms_triggers_steered.md  ms_triggers_unsteered.md  passk_n100_curves.md  passk_preliminary.md  power_analysis.md  qwq_coverage_gain.md  qwq_passk.md  style_full_stats.md  (+1 more)
examples/: metrics.json
notebooks/: walkthrough.ipynb
reports/: passk_test_run_2026-03-18.md
scripts/: 01_compute_steering_vector.py  02_generate_responses.py  03_embed_responses.py  04_compute_metrics.py  05_visualize.py  bench_steering_speed.py  easysteer_demo_test.py  generate_examples.py  generate_paper_tables.py  generate_synthetic_data.py  interactive_umap.py  plot_ngram_breakdown.py  plot_rlfh_diversity.py  review_clusters.py  run_rlfh_diversity.py  sanity_check_creativity.py  sanity_check_steering.py  sanity_check_style.py  wire_paper_tables.py
src/: clustering.py  config.py  embedding.py  eval_config.py  generation.py  pass_at_k.py  statistics.py  steering_proxy.py  utils.py
tests/: test_bigcodebench.py  test_clustering.py  test_config.py  test_coverage_gain.py  test_embedding.py  test_eval_config.py  test_pass_at_k.py  test_statistics.py  test_steering_proxy.py  test_utils.py
(+287 files in other folders)
