[project]
name = "steering-diversity"
version = "0.1.0"
description = "Measuring output diversity under steering interventions"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "accelerate",
    "datasets",
    "sentence-transformers",
    "hdbscan",
    "scikit-learn",
    "numpy",
    "pandas",
    "pyyaml",
    "tqdm",
    "matplotlib",
    "seaborn",
    "umap-learn",
    "huggingface-hub>=0.36.2",
    "python-dotenv>=1.2.1",
    "statsmodels>=0.14.6",
    "openai>=2.21.0",
    "plotly>=6.6.0",
    "inspect-ai>=0.3.189",
    "mplcursors>=0.7",
    "anthropic>=0.83.0",
    "tiktoken>=0.12.0",
    "nltk>=3.9.3",
    "evalplus>=0.3.1",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "uvicorn>=0.41.0",
    "bigcodebench>=0.2.5",
]

[project.optional-dependencies]
gpu = ["vllm", "easysteer"]
dev = ["pytest", "ruff"]

[tool.uv]
# bigcodebench depends on stock vllm, but we use the EasySteer fork
# (installed manually via `uv pip install -e EasySteer/vllm-steer`).
# This override makes the vllm requirement a no-op: the marker is never true,
# so uv resolves and installs everything else but skips vllm entirely.
override-dependencies = ["vllm>=0; sys_platform == 'never'"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0",
    "ruff>=0.15",
]
